feat(passport): 预创建用户
